Fix: Adjust header size and spacing

--- a/style.css
+++ b/style.css
@@ -13,10 +13,20 @@ body {
     background-color: #5BBDE8;
     border: 9px solid #2157C3;
     border-radius: 12px;
-    margin: 0;
+    margin: 20px auto;
     text-align: center;
+    width: 450px;
 }
 
 h1 {
     color: #FDEB34;
+    font-size: 112px;
+    letter-spacing: 10px;
+    margin: -15px 0;
+}
+
+h3 {
+    font-size: 40px;
+    letter-spacing: 3px;
+    margin: -30px 0 0 0;
 }
